<resources>
    <string name="app_name">Hub Device Demo</string>
    <string name="base_function">基础功能</string>
    <string name="device_connection">设备互通</string>
    <string name="device_shadow">设备影子</string>
    <string name="remote_service">远程服务</string>
    <string name="in_door">进门</string>
    <string name="out_door">出门</string>
    <string name="print_log">日志输出：</string>
    <string name="param">参数</string>
    <string name="connect_mqtt">连接MQTT</string>
    <string name="break_mqtt">断开MQTT连接</string>
    <string name="dynreg">动态注册</string>
    <string name="subscribe_topic">订阅主题</string>
    <string name="unsubscribe_topic">取消订阅主题</string>
    <string name="publish_topic">发布主题</string>
    <string name="subscribe_rrpc_topic">订阅RRPC主题</string>
    <string name="subscribe_broadcast_topic">订阅广播主题</string>
    <string name="subdev_online">子设备上线</string>
    <string name="subdev_offline">子设备下线</string>
    <string name="check_firmware">检查固件更新</string>
    <string name="log_test">日志测试</string>
    <string name="upload_log">日志上传</string>
    <string name="bind_subdev">绑定子设备</string>
    <string name="unbind_subdev">解绑子设备</string>
    <string name="check_subdev_relation">查询设备拓扑关系</string>
    <string name="websocket_connect">连接MQTT(websocket)</string>
    <string name="websocket_disconnect">断开MQTT连接(websocket)</string>
    <string name="websocket_status">MQTT连接状态(websocket)</string>
    <string name="get_remote_config">获取远程配置信息</string>
    <string name="concern_remote_config">关注远程配置信息</string>
    <string name="report_sub_dev_version">上报子设备版本</string>
    <string name="http_publish">基于 HTTP 接入</string>
    <string name="use_shadow">使用shadow</string>
    <string name="start_remote_service">开启远程服务</string>
    <string name="stop_remote_service">停止远程服务</string>
    <string name="connect_iot">连接IoT</string>
    <string name="break_connection">断开连接</string>
    <string name="registe_dev_property">注册设备属性</string>
    <string name="get_dev_shadow">获取设备影子</string>
    <string name="update_dev_shadow">更新设备影子</string>
    <string name="get_dev_doc">获取设备文档</string>
    <string name="timely_update_dev_shadow">定时更新设备影子</string>
    <string name="request_permission_first">必要权限申请失败</string>
    <string name="subscribe_ntp_topic">订阅NTP主题</string>
    <string name="get_ntp_service">获取NTP时间</string>
    <string name="text_ip_address">Ip地址:</string>
    <string name="text_ip_address_tip">请输入IP地址：格式为（x.x.x.x:xxxx）</string>
</resources>
