<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/btn_basic_function"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:background="#FFFFFF"
        android:text="@string/base_function"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_entry_demo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:background="#FFFFFF"
        android:text="@string/device_connection"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_shadow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:background="#FFFFFF"
        android:text="@string/device_shadow"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_remote_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:background="#FFFFFF"
        android:text="@string/remote_service"
        android:textColor="#000000"
        android:textSize="18sp" />

</LinearLayout>